--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="antialiased">
 
     <!-- Header -->
-    <header id="header" class="fixed top-4 left-0 w-full z-50 px-6 lg:px-12 flex items-center justify-between">
+    <header id="header" class="absolute top-4 left-0 w-full z-50 px-6 lg:px-12 flex items-center justify-between">
 
         <!-- Logo (Left Aligned, detached from pill) -->
         <a href="#"
@@ -198,14 +198,14 @@
                 <!-- Card 1 (Large Vertical) -->
                 <div
                     class="service-card group relative rounded-3xl overflow-hidden shadow-lg md:row-span-2 md:col-span-1 fade-in-up">
-                    <img src="coreimages/Gemini_Generated_Image_bnr8jabnr8jabnr8.png" alt="Peyzaj Projelendirme"
-                        class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-t from-forest/90 via-forest/20 to-transparent"></div>
+                    <img src="coreimages/hizmet_2.jpg" alt="Peyzaj Projelendirme" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/40 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8 w-full">
-                        <h3 class="text-2xl font-bold text-white mb-2 font-serif">Peyzaj Projelendirme & Danışmanlık
+                        <h3 class="text-2xl font-bold text-white mb-2 font-serif drop-shadow-lg">Peyzaj Projelendirme &
+                            Danışmanlık
                         </h3>
                         <p
-                            class="text-stone-200 text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            class="text-white text-sm font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0 drop-shadow-md">
                             Hayalinizdeki bahçeyi profesyonel bir tasarımla hayata geçiriyoruz.</p>
                     </div>
                 </div>
@@ -213,13 +213,12 @@
                 <!-- Card 2 -->
                 <div class="service-card group relative rounded-3xl overflow-hidden shadow-lg md:col-span-2 fade-in-up"
                     style="transition-delay: 100ms;">
-                    <img src="coreimages/Gemini_Generated_Image_p1rshap1rshap1rs.png" alt="Hazır Rulo Çim"
-                        class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-t from-forest/90 via-forest/20 to-transparent"></div>
+                    <img src="coreimages/hizmet_1.jpg" alt="Hazır Rulo Çim" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/40 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8 w-full">
-                        <h3 class="text-2xl font-bold text-white mb-2 font-serif">Hazır Rulo Çim</h3>
+                        <h3 class="text-2xl font-bold text-white mb-2 font-serif drop-shadow-lg">Hazır Rulo Çim</h3>
                         <p
-                            class="text-stone-200 text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            class="text-white text-sm font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0 drop-shadow-md">
                             Anında yeşil, sağlıklı ve kusursuz çim alanlar oluşturuyoruz.</p>
                     </div>
                 </div>
@@ -227,13 +226,13 @@
                 <!-- Card 3 -->
                 <div class="service-card group relative rounded-3xl overflow-hidden shadow-lg md:col-span-1 fade-in-up"
                     style="transition-delay: 200ms;">
-                    <img src="coreimages/Gemini_Generated_Image_7s984q7s984q7s98.png" alt="Otomatik Sulama Sistemleri"
+                    <img src="coreimages/hizmet_4.jpg" alt="Otomatik Sulama Sistemleri"
                         class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-t from-forest/90 via-forest/20 to-transparent"></div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/40 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8 w-full">
-                        <h3 class="text-2xl font-bold text-white mb-2 font-serif">Otomatik Sulama</h3>
+                        <h3 class="text-2xl font-bold text-white mb-2 font-serif drop-shadow-lg">Otomatik Sulama</h3>
                         <p
-                            class="text-stone-200 text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            class="text-white text-sm font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0 drop-shadow-md">
                             Su tasarrufu sağlayan akıllı sulama çözümleri.</p>
                     </div>
                 </div>
@@ -241,13 +240,13 @@
                 <!-- Card 4 -->
                 <div class="service-card group relative rounded-3xl overflow-hidden shadow-lg md:col-span-1 fade-in-up"
                     style="transition-delay: 300ms;">
-                    <img src="coreimages/Gemini_Generated_Image_jjhmf3jjhmf3jjhm.png" alt="Sert Zemin Uygulamaları"
-                        class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-t from-forest/90 via-forest/20 to-transparent"></div>
+                    <img src="coreimages/hizmet_3.jpg" alt="Sert Zemin Uygulamaları" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/40 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-8 w-full">
-                        <h3 class="text-2xl font-bold text-white mb-2 font-serif">Sert Zemin ve Doğal Taş</h3>
+                        <h3 class="text-2xl font-bold text-white mb-2 font-serif drop-shadow-lg">Sert Zemin ve Doğal Taş
+                        </h3>
                         <p
-                            class="text-stone-200 text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            class="text-white text-sm font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0 drop-shadow-md">
                             Yürüyüş yolları ve estetik taş uygulamaları.</p>
                     </div>
                 </div>
