--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
         <!-- Content -->
         <div class="relative z-10 text-center px-4 max-w-4xl mx-auto fade-in-up mt-12">
             <h1
-                class="text-5xl md:text-7xl lg:text-8xl font-bold text-white mb-6 leading-tight drop-shadow-xl font-serif">
+                class="text-4xl md:text-5xl lg:text-7xl font-bold text-cream mb-6 leading-tight drop-shadow-xl font-serif">
                 Doğayı Yaşam<br>Alanınıza Taşıyoruz
             </h1>
             <p
-                class="text-2xl md:text-3xl font-medium text-white mb-10 max-w-3xl mx-auto drop-shadow-[0_2px_4px_rgba(0,0,0,0.8)]">
+                class="text-xl md:text-2xl font-medium text-cream mb-10 max-w-3xl mx-auto drop-shadow-[0_2px_4px_rgba(0,0,0,0.8)]">
                 Yenilikçi ve doğa dostu projelerle, 2009'dan beri İzmir'den tüm Türkiye'ye uzanan yeşil dokunuş.
             </p>
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
@@ -815,10 +815,19 @@
                         </div>
                         <div>
                             <h4 class="font-bold text-dark text-lg mb-1">Telefon</h4>
-                            <a href="tel:+905325227587"
-                                class="text-gray-600 hover:text-terra transition-colors block">0532 522 75 87</a>
-                            <a href="tel:+905326334185"
-                                class="text-gray-600 hover:text-terra transition-colors block">0532 633 41 85</a>
+
+                            <p class="text-sm text-forest font-semibold mb-0.5 mt-2">Menemen Fidanlık Sorumlusu Atakan
+                                Damar</p>
+                            <a href="tel:+905416367350"
+                                class="text-gray-600 hover:text-terra transition-colors block mb-1">0 541 636 73 50</a>
+
+                            <p class="text-sm text-forest font-semibold mb-0.5 mt-2">Peyzaj Mimarı Yağmur Sarı Taş</p>
+                            <a href="tel:+905530655887"
+                                class="text-gray-600 hover:text-terra transition-colors block mb-1">0553 065 5887</a>
+
+                            <p class="text-sm text-forest font-semibold mb-0.5 mt-2">Alpaslan Günay</p>
+                            <a href="tel:+905072972926"
+                                class="text-gray-600 hover:text-terra transition-colors block mb-1">0507 297 2926</a>
                         </div>
                     </div>
 
@@ -943,16 +952,37 @@
                             <span class="text-base font-medium text-stone-200">Mermerli, Çanakkale Asfaltı Cd.
                                 Üzeri<br>No:474 7/1, 35000 Menemen/İzmir</span>
                         </li>
-                        <li class="flex items-center gap-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sage flex-shrink-0" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
+                        <li class="flex items-start gap-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sage flex-shrink-0 mt-1"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <a href="tel:+905325227587"
-                                class="text-base font-medium text-stone-200 hover:text-terra transition-colors">0532 522
-                                75
-                                87</a>
+                            <div class="flex flex-col gap-3">
+                                <div>
+                                    <span class="text-sm block text-stone-300 font-medium">Menemen Fidanlık Sorumlusu
+                                        Atakan Damar</span>
+                                    <a href="tel:+905416367350"
+                                        class="text-base font-medium text-stone-200 hover:text-terra transition-colors">
+                                        0 541 636 73 50
+                                    </a>
+                                </div>
+                                <div>
+                                    <span class="text-sm block text-stone-300 font-medium">Peyzaj Mimarı Yağmur Sarı
+                                        Taş</span>
+                                    <a href="tel:+905530655887"
+                                        class="text-base font-medium text-stone-200 hover:text-terra transition-colors">
+                                        0553 065 5887
+                                    </a>
+                                </div>
+                                <div>
+                                    <span class="text-sm block text-stone-300 font-medium">Alpaslan Günay</span>
+                                    <a href="tel:+905072972926"
+                                        class="text-base font-medium text-stone-200 hover:text-terra transition-colors">
+                                        0507 297 2926
+                                    </a>
+                                </div>
+                            </div>
                         </li>
                         <li class="flex items-center gap-3">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sage flex-shrink-0" fill="none"
