--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Günay Peyzaj & Fidanlık</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="coreimages/logo.png">
     <!-- Tailwind CSS (CDN) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
